{
  "version": 4,
  "terraform_version": "1.9.1",
  "serial": 120,
  "lineage": "ad1ca292-e34f-6321-dbaa-92794f65b924",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08eca54fdf6aa1dce",
            "arn": "arn:aws:ec2:eu-central-1:812958718504:elastic-ip/eipalloc-08eca54fdf6aa1dce",
            "association_id": "eipassoc-04ed88353e281152e",
            "domain": "vpc",
            "id": "eipalloc-08eca54fdf6aa1dce",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-0db611add1bd2d9c2",
            "private_dns": "ip-10-0-101-193.eu-central-1.compute.internal",
            "private_ip": "10.0.101.193",
            "public_dns": "ec2-35-157-138-166.eu-central-1.compute.amazonaws.com",
            "public_ip": "35.157.138.166",
            "public_ipv4_pool": "amazon",
            "tags_all": {
              "App": "wedding-challenge",
              "Owner": "TimS"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0221a8cb670156a98",
            "arn": "arn:aws:ec2:eu-central-1:812958718504:elastic-ip/eipalloc-0221a8cb670156a98",
            "association_id": "eipassoc-0fc0d053efe1605f6",
            "domain": "vpc",
            "id": "eipalloc-0221a8cb670156a98",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-013c1f0b6fc3381ae",
            "private_dns": "ip-10-0-102-57.eu-central-1.compute.internal",
            "private_ip": "10.0.102.57",
            "public_dns": "ec2-18-157-155-25.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.157.155.25",
            "public_ipv4_pool": "amazon",
            "tags_all": {
              "App": "wedding-challenge",
              "Owner": "TimS"
            },
            "vpc": true
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00ab25d8c3bd62ea0",
            "arn": "arn:aws:ec2:eu-central-1:812958718504:elastic-ip/eipalloc-00ab25d8c3bd62ea0",
            "association_id": "eipassoc-02eb8344750ff0f6a",
            "domain": "vpc",
            "id": "eipalloc-00ab25d8c3bd62ea0",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-023abdd58cafeb7f6",
            "private_dns": "ip-10-0-103-218.eu-central-1.compute.internal",
            "private_ip": "10.0.103.218",
            "public_dns": "ec2-18-156-70-163.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.156.70.163",
            "public_ipv4_pool": "amazon",
            "tags_all": {
              "App": "wedding-challenge",
              "Owner": "TimS"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a43b9fc420cabb27",
            "arn": "arn:aws:ec2:eu-central-1:812958718504:instance/i-09c9bb33e64a6128c",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "wedding-challenge",
            "id": "i-09c9bb33e64a6128c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3a.medium",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c59e3347a353ba26",
            "private_dns": "ip-10-0-1-147.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.147",
            "root_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 0,
                "kms_key_id": "arn:aws:kms:eu-central-1:812958718504:key/b7a1244e-f36b-4fd8-a172-7216e4a81f10",
                "tags_all": {
                  "App": "wedding-challenge",
                  "Owner": "TimS"
                },
                "throughput": 0,
                "volume_id": "vol-049b7037947b169f2",
                "volume_size": 8,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-068c6c8c6255969c7",
            "tags_all": {
              "App": "wedding-challenge",
              "Owner": "TimS"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03be55c25fcb1c1fb"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.this",
            "aws_iam_role.this",
            "aws_security_group.this",
            "data.aws_ami.this",
            "data.aws_iam_policy_document.assume",
            "data.aws_region.this",
            "module.nlb.aws_security_group.this",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:812958718504:security-group/sg-03be55c25fcb1c1fb",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TF: Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03be55c25fcb1c1fb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TF: Allow SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "TF: Allow HTTP from the NLB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d9ddeba15b353046"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "wedding-challenge",
            "name_prefix": "",
            "owner_id": "812958718504",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "App": "wedding-challenge",
              "Owner": "TimS"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a7f13da5ed18ca24"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nlb.aws_security_group.this",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.nlb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:812958718504:loadbalancer/net/wedding-challenge/993c35852afb7fc5",
            "arn_suffix": "net/wedding-challenge/993c35852afb7fc5",
            "dns_name": "wedding-challenge-993c35852afb7fc5.elb.eu-central-1.amazonaws.com",
            "dns_record_client_routing_policy": "any_availability_zone",
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": true,
            "id": "arn:aws:elasticloadbalancing:eu-central-1:812958718504:loadbalancer/net/wedding-challenge/993c35852afb7fc5",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "wedding-challenge",
            "security_groups": [
              "sg-0d9ddeba15b353046"
            ],
            "subnet_mapping": [
              {
                "allocation_id": "eipalloc-00ab25d8c3bd62ea0",
                "subnet_id": "subnet-02d5774ac3c3209ae"
              },
              {
                "allocation_id": "eipalloc-0221a8cb670156a98",
                "subnet_id": "subnet-0b54bece880d09eb9"
              },
              {
                "allocation_id": "eipalloc-08eca54fdf6aa1dce",
                "subnet_id": "subnet-0af883b133300f2ec"
              }
            ],
            "subnets": [
              "subnet-02d5774ac3c3209ae",
              "subnet-0af883b133300f2ec",
              "subnet-0b54bece880d09eb9"
            ],
            "tags": {
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "App": "wedding-challenge",
              "Owner": "TimS",
              "terraform-aws-modules": "alb"
            },
            "timeouts": {
            },
            "vpc_id": "vpc-0a7f13da5ed18ca24",
            "zone_id": "Z3F0SRJ5LGBH90"
          },
          "dependencies": [
            "aws_eip.this",
            "data.aws_region.this",
            "module.nlb.aws_security_group.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.nlb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "http",
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:812958718504:listener/net/wedding-challenge/993c35852afb7fc5/47a9178123826306",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:812958718504:targetgroup/tf-20240724193834300100000001/877690205b325eaf",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:812958718504:listener/net/wedding-challenge/993c35852afb7fc5/47a9178123826306",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:812958718504:loadbalancer/net/wedding-challenge/993c35852afb7fc5",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": {
              "Name": "wedding-challenge/http-https-redirect",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "App": "wedding-challenge",
              "Name": "wedding-challenge/http-https-redirect",
              "Owner": "TimS",
              "terraform-aws-modules": "alb"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.this",
            "aws_iam_instance_profile.this",
            "aws_iam_role.this",
            "aws_instance.this",
            "aws_security_group.this",
            "data.aws_acm_certificate.kunlabora_ninja",
            "data.aws_ami.this",
            "data.aws_iam_policy_document.assume",
            "data.aws_region.this",
            "module.nlb.aws_lb.this",
            "module.nlb.aws_lb_target_group.this",
            "module.nlb.aws_security_group.this",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": "https",
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:812958718504:listener/net/wedding-challenge/993c35852afb7fc5/1566d99662ac05be",
            "certificate_arn": "arn:aws:acm:eu-central-1:812958718504:certificate/e3f85ec5-73b5-4256-908a-3753c654cf2e",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:812958718504:targetgroup/tf-20240724193834300100000001/877690205b325eaf",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:812958718504:listener/net/wedding-challenge/993c35852afb7fc5/1566d99662ac05be",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:812958718504:loadbalancer/net/wedding-challenge/993c35852afb7fc5",
            "mutual_authentication": [],
            "port": 443,
            "protocol": "TLS",
            "ssl_policy": "ELBSecurityPolicy-TLS13-1-2-Res-2021-06",
            "tags": {
              "Name": "wedding-challenge/https-traffic",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "App": "wedding-challenge",
              "Name": "wedding-challenge/https-traffic",
              "Owner": "TimS",
              "terraform-aws-modules": "alb"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.this",
            "aws_iam_instance_profile.this",
            "aws_iam_role.this",
            "aws_instance.this",
            "aws_security_group.this",
            "data.aws_acm_certificate.kunlabora_ninja",
            "data.aws_ami.this",
            "data.aws_iam_policy_document.assume",
            "data.aws_region.this",
            "module.nlb.aws_lb.this",
            "module.nlb.aws_lb_target_group.this",
            "module.nlb.aws_security_group.this",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.nlb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "wedding-challenge",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:812958718504:targetgroup/tf-20240724193834300100000001/877690205b325eaf",
            "arn_suffix": "targetgroup/tf-20240724193834300100000001/877690205b325eaf",
            "connection_termination": false,
            "deregistration_delay": "10",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-399",
                "path": "/actuator/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 6,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:812958718504:targetgroup/tf-20240724193834300100000001/877690205b325eaf",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-central-1:812958718504:loadbalancer/net/wedding-challenge/993c35852afb7fc5"
            ],
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tf-20240724193834300100000001",
            "name_prefix": "tf-",
            "port": 80,
            "preserve_client_ip": "true",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "tags": {
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "App": "wedding-challenge",
              "Owner": "TimS",
              "terraform-aws-modules": "alb"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
                "enable_unhealthy_connection_termination": true
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0a7f13da5ed18ca24"
          },
          "dependencies": [
            "aws_iam_instance_profile.this",
            "aws_iam_role.this",
            "aws_instance.this",
            "aws_security_group.this",
            "data.aws_ami.this",
            "data.aws_iam_policy_document.assume",
            "data.aws_region.this",
            "module.nlb.aws_security_group.this",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.nlb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "wedding-challenge",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:812958718504:targetgroup/tf-20240724193834300100000001/877690205b325eaf-20240724193835267500000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:812958718504:targetgroup/tf-20240724193834300100000001/877690205b325eaf",
            "target_id": "i-09c9bb33e64a6128c"
          },
          "dependencies": [
            "aws_iam_instance_profile.this",
            "aws_iam_role.this",
            "aws_instance.this",
            "aws_security_group.this",
            "data.aws_ami.this",
            "data.aws_iam_policy_document.assume",
            "data.aws_region.this",
            "module.nlb.aws_lambda_permission.this",
            "module.nlb.aws_lb_target_group.this",
            "module.nlb.aws_security_group.this",
            "module.nlb.data.aws_partition.current",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.nlb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:812958718504:security-group/sg-0d9ddeba15b353046",
            "description": "Security group for wedding-challenge network load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d9ddeba15b353046",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TF: Allow HTTP traffic",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TF: Allow HTTPS traffic",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "wedding-challenge-20240724175717689500000006",
            "name_prefix": "wedding-challenge-",
            "owner_id": "812958718504",
            "revoke_rules_on_delete": false,
            "tags": {
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "App": "wedding-challenge",
              "Owner": "TimS",
              "terraform-aws-modules": "alb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a7f13da5ed18ca24"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.nlb",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "all",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:812958718504:security-group-rule/sgr-01baecb86d477697e",
            "cidr_ipv4": "10.0.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-01baecb86d477697e",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0d9ddeba15b353046",
            "security_group_rule_id": "sgr-01baecb86d477697e",
            "tags": {
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "App": "wedding-challenge",
              "Owner": "TimS",
              "terraform-aws-modules": "alb"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nlb.aws_security_group.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.nlb",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "http",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:812958718504:security-group-rule/sgr-097df781d19cd8815",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "TF: Allow HTTP traffic",
            "from_port": 80,
            "id": "sgr-097df781d19cd8815",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0d9ddeba15b353046",
            "security_group_rule_id": "sgr-097df781d19cd8815",
            "tags": {
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "App": "wedding-challenge",
              "Owner": "TimS",
              "terraform-aws-modules": "alb"
            },
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nlb.aws_security_group.this",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "https",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:812958718504:security-group-rule/sgr-08eef8de904e76558",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "TF: Allow HTTPS traffic",
            "from_port": 443,
            "id": "sgr-08eef8de904e76558",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0d9ddeba15b353046",
            "security_group_rule_id": "sgr-08eef8de904e76558",
            "tags": {
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "App": "wedding-challenge",
              "Owner": "TimS",
              "terraform-aws-modules": "alb"
            },
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nlb.aws_security_group.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01d5c99276b0681b8",
            "arn": "arn:aws:ec2:eu-central-1:812958718504:elastic-ip/eipalloc-01d5c99276b0681b8",
            "association_id": "eipassoc-0c0fc43e710fcab73",
            "domain": "vpc",
            "id": "eipalloc-01d5c99276b0681b8",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-0f63852d6af5cdd90",
            "private_dns": "ip-10-0-101-186.eu-central-1.compute.internal",
            "private_ip": "10.0.101.186",
            "public_dns": "ec2-18-197-204-77.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.197.204.77",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "wedding-challenge-eu-central-1a"
            },
            "tags_all": {
              "App": "wedding-challenge",
              "Name": "wedding-challenge-eu-central-1a",
              "Owner": "TimS"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_region.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:812958718504:internet-gateway/igw-06db3f8f242944cc8",
            "id": "igw-06db3f8f242944cc8",
            "owner_id": "812958718504",
            "tags": {
              "Name": "wedding-challenge"
            },
            "tags_all": {
              "App": "wedding-challenge",
              "Name": "wedding-challenge",
              "Owner": "TimS"
            },
            "vpc_id": "vpc-0a7f13da5ed18ca24"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01d5c99276b0681b8",
            "association_id": "eipassoc-0c0fc43e710fcab73",
            "connectivity_type": "public",
            "id": "nat-0c8f5c0e0d1d02986",
            "network_interface_id": "eni-0f63852d6af5cdd90",
            "private_ip": "10.0.101.186",
            "public_ip": "18.197.204.77",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0af883b133300f2ec",
            "tags": {
              "Name": "wedding-challenge-eu-central-1a"
            },
            "tags_all": {
              "App": "wedding-challenge",
              "Name": "wedding-challenge-eu-central-1a",
              "Owner": "TimS"
            }
          },
          "dependencies": [
            "data.aws_region.this",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0cbf92964212837621080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0c8f5c0e0d1d02986",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0cbf9296421283762",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_region.this",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-06db3f8f242944cc8",
            "id": "r-rtb-04e9a078eb18703b41080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04e9a078eb18703b4",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_region.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:812958718504:route-table/rtb-0cbf9296421283762",
            "id": "rtb-0cbf9296421283762",
            "owner_id": "812958718504",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0c8f5c0e0d1d02986",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "wedding-challenge-private"
            },
            "tags_all": {
              "App": "wedding-challenge",
              "Name": "wedding-challenge-private",
              "Owner": "TimS"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a7f13da5ed18ca24"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_region.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:812958718504:route-table/rtb-04e9a078eb18703b4",
            "id": "rtb-04e9a078eb18703b4",
            "owner_id": "812958718504",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06db3f8f242944cc8",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "wedding-challenge-public"
            },
            "tags_all": {
              "App": "wedding-challenge",
              "Name": "wedding-challenge-public",
              "Owner": "TimS"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a7f13da5ed18ca24"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_region.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ee3f8024b889e178",
            "route_table_id": "rtb-0cbf9296421283762",
            "subnet_id": "subnet-049e1babc948b80d0"
          },
          "dependencies": [
            "data.aws_region.this",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c007029a8c12c46b",
            "route_table_id": "rtb-0cbf9296421283762",
            "subnet_id": "subnet-02eceefe4e191b9c6"
          },
          "dependencies": [
            "data.aws_region.this",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bf125b2b34987b0e",
            "route_table_id": "rtb-0cbf9296421283762",
            "subnet_id": "subnet-0f25f5a51c5069de8"
          },
          "dependencies": [
            "data.aws_region.this",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00ec7fa1dcd6756e8",
            "route_table_id": "rtb-0cbf9296421283762",
            "subnet_id": "subnet-068c6c8c6255969c7"
          },
          "dependencies": [
            "data.aws_region.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c6dbbee3b437b3c0",
            "route_table_id": "rtb-0cbf9296421283762",
            "subnet_id": "subnet-03aaea22d2a589671"
          },
          "dependencies": [
            "data.aws_region.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0435f89d959d57931",
            "route_table_id": "rtb-0cbf9296421283762",
            "subnet_id": "subnet-070b91b5d241e9780"
          },
          "dependencies": [
            "data.aws_region.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e49c6296f9d6fe41",
            "route_table_id": "rtb-04e9a078eb18703b4",
            "subnet_id": "subnet-0af883b133300f2ec"
          },
          "dependencies": [
            "data.aws_region.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-081cbdd582c97189d",
            "route_table_id": "rtb-04e9a078eb18703b4",
            "subnet_id": "subnet-0b54bece880d09eb9"
          },
          "dependencies": [
            "data.aws_region.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fb836593bcca475c",
            "route_table_id": "rtb-04e9a078eb18703b4",
            "subnet_id": "subnet-02d5774ac3c3209ae"
          },
          "dependencies": [
            "data.aws_region.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:812958718504:subnet/subnet-049e1babc948b80d0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.201.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-049e1babc948b80d0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "812958718504",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "wedding-challenge-db-eu-central-1a"
            },
            "tags_all": {
              "App": "wedding-challenge",
              "Name": "wedding-challenge-db-eu-central-1a",
              "Owner": "TimS"
            },
            "vpc_id": "vpc-0a7f13da5ed18ca24"
          },
          "dependencies": [
            "data.aws_region.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:812958718504:subnet/subnet-02eceefe4e191b9c6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.202.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02eceefe4e191b9c6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "812958718504",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "wedding-challenge-db-eu-central-1b"
            },
            "tags_all": {
              "App": "wedding-challenge",
              "Name": "wedding-challenge-db-eu-central-1b",
              "Owner": "TimS"
            },
            "vpc_id": "vpc-0a7f13da5ed18ca24"
          },
          "dependencies": [
            "data.aws_region.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:812958718504:subnet/subnet-0f25f5a51c5069de8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.203.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f25f5a51c5069de8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "812958718504",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "wedding-challenge-db-eu-central-1c"
            },
            "tags_all": {
              "App": "wedding-challenge",
              "Name": "wedding-challenge-db-eu-central-1c",
              "Owner": "TimS"
            },
            "vpc_id": "vpc-0a7f13da5ed18ca24"
          },
          "dependencies": [
            "data.aws_region.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:812958718504:subnet/subnet-068c6c8c6255969c7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-068c6c8c6255969c7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "812958718504",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "wedding-challenge-private-eu-central-1a"
            },
            "tags_all": {
              "App": "wedding-challenge",
              "Name": "wedding-challenge-private-eu-central-1a",
              "Owner": "TimS"
            },
            "vpc_id": "vpc-0a7f13da5ed18ca24"
          },
          "dependencies": [
            "data.aws_region.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:812958718504:subnet/subnet-03aaea22d2a589671",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03aaea22d2a589671",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "812958718504",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "wedding-challenge-private-eu-central-1b"
            },
            "tags_all": {
              "App": "wedding-challenge",
              "Name": "wedding-challenge-private-eu-central-1b",
              "Owner": "TimS"
            },
            "vpc_id": "vpc-0a7f13da5ed18ca24"
          },
          "dependencies": [
            "data.aws_region.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:812958718504:subnet/subnet-070b91b5d241e9780",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-070b91b5d241e9780",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "812958718504",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "wedding-challenge-private-eu-central-1c"
            },
            "tags_all": {
              "App": "wedding-challenge",
              "Name": "wedding-challenge-private-eu-central-1c",
              "Owner": "TimS"
            },
            "vpc_id": "vpc-0a7f13da5ed18ca24"
          },
          "dependencies": [
            "data.aws_region.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:812958718504:subnet/subnet-0af883b133300f2ec",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0af883b133300f2ec",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "812958718504",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "wedding-challenge-public-eu-central-1a"
            },
            "tags_all": {
              "App": "wedding-challenge",
              "Name": "wedding-challenge-public-eu-central-1a",
              "Owner": "TimS"
            },
            "vpc_id": "vpc-0a7f13da5ed18ca24"
          },
          "dependencies": [
            "data.aws_region.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:812958718504:subnet/subnet-0b54bece880d09eb9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b54bece880d09eb9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "812958718504",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "wedding-challenge-public-eu-central-1b"
            },
            "tags_all": {
              "App": "wedding-challenge",
              "Name": "wedding-challenge-public-eu-central-1b",
              "Owner": "TimS"
            },
            "vpc_id": "vpc-0a7f13da5ed18ca24"
          },
          "dependencies": [
            "data.aws_region.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:812958718504:subnet/subnet-02d5774ac3c3209ae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02d5774ac3c3209ae",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "812958718504",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "wedding-challenge-public-eu-central-1c"
            },
            "tags_all": {
              "App": "wedding-challenge",
              "Name": "wedding-challenge-public-eu-central-1c",
              "Owner": "TimS"
            },
            "vpc_id": "vpc-0a7f13da5ed18ca24"
          },
          "dependencies": [
            "data.aws_region.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:812958718504:vpc/vpc-0a7f13da5ed18ca24",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0de4ecda99e84f860",
            "default_route_table_id": "rtb-0d7c92f97ec5ed215",
            "default_security_group_id": "sg-059b883481fe6aedd",
            "dhcp_options_id": "dopt-01b07ea4bab82833f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a7f13da5ed18ca24",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d7c92f97ec5ed215",
            "owner_id": "812958718504",
            "tags": {
              "Name": "wedding-challenge"
            },
            "tags_all": {
              "App": "wedding-challenge",
              "Name": "wedding-challenge",
              "Owner": "TimS"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}